Multi-jvm tests started

--- a/ecos/src/test/resources/testServer.conf
+++ b/ecos/src/test/resources/testServer.conf
@@ -7,13 +7,14 @@
 			provider = "akka.cluster.ClusterActorRefProvider"
 		}
 		remote {
+			log-remote-lifecycle-events = off
 			enabled-transports = ["akka.remote.netty.tcp"]
 			netty.tcp {	
-				port = 9001
+				port = 9000
 			}
 		}
 		cluster {
-			seed-nodes = [ "akka.tcp://roots@"${myIp}":9001" ]
+			seed-nodes = [ "akka.tcp://test@"${myIp}":9000" ]
 			auto-down = on
 			log-info = off
 		}
