wip - not working

--- a/ecos/src/test/resources/unit_cfg1.conf
+++ b/ecos/src/test/resources/unit_cfg1.conf
@@ -1,5 +1,5 @@
 	cluster-name   = "podNest"
-	http-port      = 9030
+	http-port      = $httpPort
 	jar-files      = ["http://localhost:9090/repo/pod1.jar"]
 	pod-class      = "co.nubilus.ecos.MyPod"
 	pod-actor-name = pod
@@ -16,11 +16,11 @@
 			log-remote-lifecycle-events = off
 			enabled-transports = ["akka.remote.netty.tcp"]
 			netty.tcp {	
-				port = 9040
+				port = $akkaPort
 			}
 		}
 		cluster {
-			seed-nodes = [ "akka.tcp://podNest@$host:9040" ]
+			seed-nodes = [ "akka.tcp://podNest@$host:$seedPort" ]
 			auto-down = on
 			log-info = off
 		}
