Resolved akka cluster timing issues

--- a/ecos/src/test/resources/testServer.conf
+++ b/ecos/src/test/resources/testServer.conf
@@ -4,7 +4,7 @@
 		stdout-loglevel = "ERROR"
 		loggers = ["akka.event.slf4j.Slf4jLogger"]
 		actor {
-			provider = "akka.cluster.ClusterActorRefProvider"
+			provider = "akka.remote.RemoteActorRefProvider"
 		}
 		remote {
 			log-remote-lifecycle-events = off
@@ -12,10 +12,5 @@
 			netty.tcp {	
 				port = 9000
 			}
-		}
-		cluster {
-			seed-nodes = [ "akka.tcp://test@"${myIp}":9000" ]
-			auto-down = on
-			log-info = off
 		}
 	}
