--- a/ecos/src/test/resources/worker.conf
+++ b/ecos/src/test/resources/worker.conf
@@ -1,3 +1,4 @@
+	cluster-name = rootsCluster
 	akka {
 		log-dead-letters-during-shutdown = off
 		loglevel = "ERROR"
@@ -10,12 +11,13 @@
 			log-remote-lifecycle-events = off
 			enabled-transports = ["akka.remote.netty.tcp"]
 			netty.tcp {	
+				hostname = ${myIp}
 				port = 9000
 			}
 		}
 		cluster {
 			seed-nodes = [ "akka.tcp://rootsCluster@"${myIp}":9011" ]
-			auto-down = on
+			auto-down-unreachable-after = 2s
 			log-info = off
 		}
 	}
